ClearBnB-project/www/src/style/ResidenceDetails.css
.residenceDetail > .inner {
  width: 90%;
  margin: 0 auto;
  margin-top: 20px;
  padding: 20px;
  background: white;
  border-radius: 10px;
  margin-bottom: 20px;
}

.residenceDetail > .inner > .infoWrapper {
  padding-right: 40px;
}

.residenceDetail > .inner > .images {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-gap: 10px;
}

.residenceDetail > .inner > .images > img:hover {
  cursor: pointer;
  opacity: 80%;
}

.residenceDetail .__react_modal_image__medium_img {
  max-width: 80%;
  max-height: 80%;
}

.residenceDetail > .inner > .images img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}

.residenceDetail > .inner > .infoWrapper > .desc {
  width: 90%;
}

.residenceDetail > .inner > .infoWrapper > .desc > p {
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  color: black;
  letter-spacing: 1.2px;
}

.residenceDetail > .inner > .infoWrapper > .desc > .resTitle {
  font-family: "Montserrat", sans-serif;
  font-size: 30px;
  color: black;
  letter-spacing: 1.2px;
}

.residenceDetail > .inner > .infoWrapper > .desc > p > span {
  color: #f50057;
  font-weight: bolder;
}

.dates {
  display: grid;
  grid-template-columns: 20%;
}

.startDate,
.endDate {
  background: #eee;
  width: 100%;
  margin-top: 10px;
  padding: 10px;
  font-size: large;
  border: none;
  border-radius: 10px;
  text-align: center;
  cursor: pointer;
}

.inputVisitor {
  background: #eee;
  width: 20%;
  border: none;
  border-radius: 10px;
  text-align: center;
  padding: 10px;
  font-size: large;
}

.book-btn {
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 10px;
  width: 21.5%;
  border: none;
  color: white;
  background: rgb(54, 54, 212);
  font-size: large;
  border-radius: 10px;
  cursor: pointer;
}

.book-btn:hover {
  transform: scale(1.03);
  transition: 300ms;
}

.residenceDetail > .inner > .valCheck {
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  color: #f50057;
  letter-spacing: 2.1px;
  text-transform: uppercase;
}

.residenceDetail > .inner > .infoWrapper > .features > .features-wrapper {
  margin-top: 20px;
  width: 100%;
  max-height: 50vh;
  padding: 20px;
  background: #eee;
  border-radius: 10px;
  display: grid;
  grid-template-columns: 33.3% 33.3% 33.3%;
  justify-items: center;
}

.residenceDetail > .inner > .infoWrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
}

.owner > p {
  margin-bottom: 10px;
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  color: #f50057;
  letter-spacing: 2.1px;
  text-transform: uppercase;
}

.owner > .MuiSvgIcon-root {
  margin-top: 20px;
  color: #f50057;
  cursor: pointer;
}

.residenceDetail > .inner > .infoWrapper > .features > .dontExist {
  color: rgb(158, 151, 151);
  text-decoration: line-through;
}

.residenceDetail > .confirm {
  background: white;
  width: 40%;
  margin: 20px auto;
  padding: 10px;
  border-radius: 5px;
}

.residenceDetail > .confirm > .head {
  font-family: "Montserrat", sans-serif;
  font-size: 30px;
  color: black;
  letter-spacing: 3.1px;
}

.pickAVisitor {
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  color: #f50057;
  letter-spacing: 2.1px;
  text-transform: uppercase;
}

.bookWarn {
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  color: #f50057;
  letter-spacing: 2.1px;
  text-transform: uppercase;
}

.residenceDetail > .confirm > .completed {
  font-family: "Montserrat", sans-serif;
  font-size: 20px;
  color: black;
  letter-spacing: 1.8px;
}

.residenceDetail > .confirm > img {
  display: block;
  width: 70%;
  height: 30%;
  object-fit: cover;
  border-radius: 5px;
  margin: 10px auto;
}

.residenceDetail > .confirm > p > span {
  font-weight: bolder;
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  color: black;
  letter-spacing: 1.1px;
}

.residenceDetail > .confirm > p {
  text-align: center;
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  color: #f50057;
  letter-spacing: 1.1px;
}

.residenceDetail > .confirm > .btns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-content: center;
  grid-gap: 10px;
}

.residenceDetail > .confirm > .btns > button {
  margin-bottom: 10px;
  padding: 10px;
  border: none;
  background: rgb(68, 68, 248);
  color: white;
  font-size: large;
  border-radius: 10px;
  cursor: pointer;
}

.residenceDetail > .confirm > .btns > button:hover {
  transform: scale(1.02);
  transition: 300ms;
}
@media (max-width: 480px) {
  .residenceDetail > .inner > .infoWrapper {
    grid-template-columns: 1fr;
  }
  .residenceDetail > .inner > .infoWrapper > .desc {
    width: 100%;
  }
  .residenceDetail .book-btn {
    width: 100%;
    text-align: center;
  }
  .residenceDetail > .inner > .images img {
  height: 130%;
}
}
@media (min-width: 481px) and (max-width: 767px) {
  .residenceDetail > .inner > .infoWrapper {
    grid-template-columns: 1fr;
  }
  .residenceDetail > .inner > .infoWrapper > .desc {
    width: 100%;
  }
  .residenceDetail .book-btn {
    width: 100%;
    text-align: center;
  }
}
@media (min-width: 768px) and (max-width: 1024px) {
  .residenceDetail > .inner > .infoWrapper {
    grid-template-columns: 1fr;
  }
  .residenceDetail > .inner > .infoWrapper > .desc {
    width: 100%;
  }
  .residenceDetail .book-btn {
    width: 100%;
    text-align: center;
  }
}

